docs: update HEARTBEAT - C20 Dockerfile optimization complete
C20 (N36): Multi-stage Dockerfile with Spring Boot layered JAR + jlink minimal JRE targeting <200MB image size. distroless/nonroot base, TCP health check, non-root user.